--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,8 @@ targetCompatibility = 1.8
 dependencies {
 	testCompile "junit:junit:4.12"
 }
+
+tasks.withType(JavaCompile)
+{
+	options.encoding = 'UTF-8'
+}
